# Metamaterials_PINN

./: .gitignore  GEMINI.md  PINN_Gauss.ipynb  PINN_Lossy_Line.ipynb  PINN_Simple.ipynb  README.md  Test_PINN.ipynb  conftest.py  debug_grad_Hz.py  plane_wave_pinn.pth  point_charge_pinn.pth  pyproject.toml  requirements.txt  run_tests.py  test_config.ipynb  train_spp_pinn.py  validate_physics.ipynb  validate_physics.py  visualize_pinn_plane_wave.py
.claude/: settings.local.json
config/: __init__.py  base_config.yaml  metamaterial_params.yaml  spp_config.yaml
docs/plans/: 2025-12-06-network-output-format-design.md  2025-12-06-plane-wave-validation-implementation.md  2025-12-06-plane-wave-validation.md
examples/: validate_plane_wave.py
scripts/: evaluate.py  train.py  train_plane_wave_pinn.py  train_point_charge_pinn.py  visualize_pinn_field.py  visualize_point_charge.py
src/data/: __init__.py  collection_points.py  domain_sampler.py
src/models/: __init__.py  electrostatics_pinn.py  loss_functions.py  pinn_network.py  test.ipynb
src/physics/: __init__.py  boundary_conditions.py  maxwell_equations.py  metamaterial.py
src/utils/: __init.py  metrics.py  plotting.py
tests/: test_config.py  test_loss_functions.py  test_physics.py  test_pinn_plane_wave.py
tests/examples/: test_validate_plane_wave.py
