[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metamaterials-pinn"
version = "0.1.0"
authors = [
  { name="Dr Robert Michael Jones", email="robert.m.jones@kcl.ac.uk" },
]
description = "A Physics-Informed Neural Network (PINN) to model and simulate Surface Plasmon Polaritons (SPPs) on metamaterial interfaces."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/spp-metamaterial-pinn"
"Bug Tracker" = "https://github.com/yourusername/spp-metamaterial-pinn/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
